--- a/_posts/info/2000-01-01-info.md
+++ b/_posts/info/2000-01-01-info.md
@@ -5,4 +5,25 @@ categories:
  - info
 ---
 
-General Information
+**University of Rhode Island**
+**BIO 181G**
+**The information age: from politics to medicine**
+**Fall 2017**
+
+**Instructor:** Dr. Rachel Schwartz  
+
+**Office Location:** CBLS 377
+
+**Telephone:**  4-5404
+
+**Email:** rsschwartz@uri.edu
+Please note that I will do my best to respond promptly between 9-5 on weekdays.
+
+**Office Hours:**  Tue 2 - 3 and Fri 1 - 2
+Please feel free to come by without an appointment during this time. To talk with me during other times please set up a meeting by email.
+
+**Class Days / Time:**  T/Th 12:30 - 1:45
+
+**Classroom:**  CBLS 252
+
+**Prerequisites:** None
