--- a/_posts/info/2000-01-06a-writing.md
+++ b/_posts/info/2000-01-06a-writing.md
@@ -6,7 +6,8 @@ categories:
 ---
 
 * Be concrete rather than abstract (see below)
-* Use active verbs
+* Use active verbs (exciting and not passive voice)
+  * Eliminate forms of "to be" as much as possible (e.g. "be" "is", "was", "were", "are")
 * Put human beings in rather than writing impersonally
 * Use shorter sentences
 * Use simpler and more compact words 
