--- a/_posts/info/2000-01-06-writing.md
+++ b/_posts/info/2000-01-06-writing.md
@@ -5,7 +5,7 @@ categories:
  - info
 ---
 
-* Be concrete rather than abstract (see below)
+* Be [concrete](concrete) rather than abstract
 * Use active verbs (exciting and not passive voice)
   * Eliminate forms of "to be" as much as possible (e.g. "be" "is", "was", "were", "are")
 * Put human beings in rather than writing impersonally
@@ -18,15 +18,3 @@ categories:
 The [Hemingway App](http://www.hemingwayapp.com/) will correct grammar and writing errors. Use it!
 
 [Grammarly](https://www.grammarly.com/) corrects a variety of errors. Use it!
-
-```
-"What is a concrete noun?" you ask.
-
-"It's something you can drop on your foot. It's that simple."
-
-"So if I am writing about markets, productivity and wealth, I am going to...."
-
-"Yes indeed -- you are going to write about things you can drop on your foot, and people, too. Green peppers, ears of corn, windshield wipers, or a grimy mechanic changing your car's oil. No matter how abstract your topic, how intangible, your first step is to find things you can drop on your foot."
-
-from https://www.theatlantic.com/national/archive/2012/10/the-secret-to-good-writing-its-about-objects-not-ideas/263113/
-```
