--- a/_posts/info/2000-01-06-writing.md
+++ b/_posts/info/2000-01-06-writing.md
@@ -5,7 +5,7 @@ categories:
  - info
 ---
 
-* Be [concrete](concrete) rather than abstract
+* Be [concrete](../concrete) rather than abstract
 * Use active verbs (exciting and not passive voice)
   * Eliminate forms of "to be" as much as possible (e.g. "be" "is", "was", "were", "are")
 * Put human beings in rather than writing impersonally
