--- a/_posts/weeks/2017-09-07-week1.md
+++ b/_posts/weeks/2017-09-07-week1.md
@@ -5,4 +5,9 @@ categories:
  - content
 ---
 
-Articles will go here
+In class readings:
+
+Parts 1-4 of
+https://www.seattlebikeblog.com/2014/06/09/a-statistical-analysis-of-biking-on-the-fremont-bridge-part-1-overview/
+
+https://www.nytimes.com/2017/02/02/education/edlife/will-you-graduate-ask-big-data.html
