--- a/_posts/weeks/2017-09-07-week1.md
+++ b/_posts/weeks/2017-09-07-week1.md
@@ -1,5 +1,5 @@
 ---
-title: Week 1
+title: Day 1
 layout: course_page
 categories:
  - content
@@ -8,6 +8,11 @@ categories:
 **In class readings:**
 
 Parts 1-4 of  
-<https://www.seattlebikeblog.com/2014/06/09/a-statistical-analysis-of-biking-on-the-fremont-bridge-part-1-overview/>
+[Bike on the Fremont Bridge](ttps://www.seattlebikeblog.com/2014/06/09/a-statistical-analysis-of-biking-on-the-fremont-bridge-part-1-overview/)
 
-<https://www.nytimes.com/2017/02/02/education/edlife/will-you-graduate-ask-big-data.html>
+[NYTimes: Will You Graduate - Ask Big Data](https://www.nytimes.com/2017/02/02/education/edlife/will-you-graduate-ask-big-data.html)
+
+**Before next class:**
+
+Watch: 
+[TED: Big Data is Better Data](https://www.ted.com/talks/kenneth_cukier_big_data_is_better_data)
