--- a/_posts/weeks/2017-09-07-week1.md
+++ b/_posts/weeks/2017-09-07-week1.md
@@ -8,7 +8,7 @@ categories:
 **In class readings:**
 
 Parts 1-4 of  
-[Bike on the Fremont Bridge](ttps://www.seattlebikeblog.com/2014/06/09/a-statistical-analysis-of-biking-on-the-fremont-bridge-part-1-overview/)
+[Bikes on the Fremont Bridge](https://www.seattlebikeblog.com/2014/06/09/a-statistical-analysis-of-biking-on-the-fremont-bridge-part-1-overview/)
 
 [NYTimes: Will You Graduate - Ask Big Data](https://www.nytimes.com/2017/02/02/education/edlife/will-you-graduate-ask-big-data.html)
 
