--- a/_posts/info/2000-01-04-schedule.md
+++ b/_posts/info/2000-01-04-schedule.md
@@ -5,25 +5,25 @@ categories:
  - info
 ---
 
-**Meeting Schedule**
+### Meeting Schedule
 
-Week | Subject | Broad topic | Readings
---- | --- | --- | ---
-1| Course intro: syllabus and writing rubrics
- | What is Big Data and why do we collect it? | Overview | M&C 1 |
-2 | Government data collection: the census, crime, populations |  Basic stats|  M&C 2
-|Use of data in decision-making* | Basic policy
-3 | Political polls | Sampling | M&C 3
-4 | Advertising | Correlation | M&C 4
-5 | Genome Sequencing | Data organization | M&C 5
-6 | Sports | Probabilities |M&C 7-8|
-7 | Medicine | Causation | O'Neill 5
-8 | Healthcare | Calculating risk |  O'Neill 6
-9 | The parable of Google Flu | Algorithms|M&C afterword
-10 | Business | Optimization | O'Neill 7, 11
-11 | Financing and hiring  | Bias | O'Neill Intro
-12 | Social media** | Privacy and Ethics | M&C 9, O'Neill 10 |
-13 | Social media | Data availability | O'Neill 4
+Date | Subject | Broad topic | Readings
+ --- | --- | --- | ---
+9/7 | Course intro: syllabus and writing rubrics
+9/12 | What is Big Data and why do we collect it? | Overview | M&C 1 
+ | Government data collection: the census, crime, populations* |  Basic stats|  M&C 2
+|Use of data in decision-making | Basic policy
+ | Political polls | Sampling** | M&C 3
+ | Advertising | Correlation | M&C 4
+ | Genome Sequencing | Data organization | M&C 5
+ | Sports | Probabilities |M&C 7-8|
+ | Medicine | Causation | O'Neill 5
+ | Healthcare | Calculating risk |  O'Neill 6
+ | The parable of Google Flu | Algorithms|M&C afterword
+ | Business | Optimization | O'Neill 7, 11
+ | Financing and hiring  | Bias | O'Neill Intro
+ | Social media** | Privacy and Ethics | M&C 9, O'Neill 10 
+ | Social media | Data availability | O'Neill 4
 
-*Guest lecturer from Business  
-**Guest lecturer from Philosophy
+*Guest lecturer from the Library  
+**Guest lecturer from Political Science
