--- a/_posts/info/2000-01-04-schedule.md
+++ b/_posts/info/2000-01-04-schedule.md
@@ -11,19 +11,22 @@ Date | Subject | Broad topic | Readings
  --- | --- | --- | ---
 9/7 | Course intro: syllabus and writing rubrics
 9/12 | What is Big Data and why do we collect it? | Overview | M&C 1 
- | Government data collection: the census, crime, populations* |  Basic stats|  M&C 2
-|Use of data in decision-making | Basic policy
- | Political polls | Sampling** | M&C 3
+9/14 | Ethical issues in big data |Ethics |
+9/19 | Government data collection: the census, crime, populations | |
+9/21 | Government data collection: the census* |  Basic stats|  M&C 2
+9/26 | Use of data in decision-making | Basic policy
+9/28 | Political polls** | Sampling | M&C 3
  | Advertising | Correlation | M&C 4
  | Genome Sequencing | Data organization | M&C 5
  | Sports | Probabilities |M&C 7-8|
  | Medicine | Causation | O'Neill 5
  | Healthcare | Calculating risk |  O'Neill 6
  | The parable of Google Flu | Algorithms|M&C afterword
- | Business | Optimization | O'Neill 7, 11
+ | Business*** | Optimization | O'Neill 7, 11
  | Financing and hiring  | Bias | O'Neill Intro
- | Social media** | Privacy and Ethics | M&C 9, O'Neill 10 
+ | Social media | Privacy and Ethics | M&C 9, O'Neill 10 
  | Social media | Data availability | O'Neill 4
 
 *Guest lecturer from the Library  
 **Guest lecturer from Political Science
+***Guest lecturer from Business
