--- a/_posts/weeks/2017-09-07-week1.md
+++ b/_posts/weeks/2017-09-07-week1.md
@@ -16,3 +16,6 @@ Parts 1-4 of
 
 Watch:  
 [TED: Big Data is Better Data](https://www.ted.com/talks/kenneth_cukier_big_data_is_better_data)
+
+Read:  
+Chapter 1 of Mayer-Schonberger and Cukier
