--- a/_posts/info/2000-01-03-texts.md
+++ b/_posts/info/2000-01-03-texts.md
@@ -7,8 +7,10 @@ categories:
 
 **Required texts**
 
-Big Data: A Revolution That Will Transform How We Live, Work, and Think. Viktor Mayer-Schönberger and Kenneth Cukier. 2013. Houghton Mifflin Harcourt. (M&C in Readings list).
+Big Data: A Revolution That Will Transform How We Live, Work, and Think. Viktor Mayer-Schönberger and Kenneth Cukier. 2013. Houghton Mifflin Harcourt. (M&C in Readings list).  
+Available on Kindle
 
-Weapons of Math Destruction. Cathy O'Neil. 2016. Random House.
+Weapons of Math Destruction. Cathy O'Neil. 2016. Random House.  
+Available on Kindle
 
 Additional readings will be assigned as events occur and are reported in the news.
