--- a/_posts/weeks/2017-09-07-day1.md
+++ b/_posts/weeks/2017-09-07-day1.md
@@ -18,4 +18,4 @@ Watch:
 [TED: Big Data is Better Data](https://www.ted.com/talks/kenneth_cukier_big_data_is_better_data)
 
 Read:  
-Chapter 1 of Mayer-Schonberger and Cukier
+Chapter 1 of Mayer-Schonberger and Cukier ([Partly available from Google Books](https://books.google.com/books?id=HpHcGAkFEjkC&printsec=frontcover#v=onepage&q&f=false))
