add day 1 notes

--- a/_posts/weeks/2017-09-07-day1.md
+++ b/_posts/weeks/2017-09-07-day1.md
@@ -19,3 +19,9 @@ Watch:
 
 Read:  
 Chapter 1 of Mayer-Schonberger and Cukier ([Partly available from Google Books](https://books.google.com/books?id=HpHcGAkFEjkC&printsec=frontcover#v=onepage&q&f=false))
+
+### Notes from class
+
+[Why this class](day1notes.md)
+
+[Your thoughts on writing](rubricnotes.md)
