--- a/_posts/weeks/2017-09-07-day1.md
+++ b/_posts/weeks/2017-09-07-day1.md
@@ -22,6 +22,6 @@ Chapter 1 of Mayer-Schonberger and Cukier ([Partly available from Google Books](
 
 ### Notes from class
 
-[Why this class](../day1notes)
+[Why this class](../day1notes.md)
 
-[Your thoughts on writing](../rubricnotes)
+[Your thoughts on writing](../rubricnotes.md)
