--- a/_posts/weeks/2017-09-12-day2.md
+++ b/_posts/weeks/2017-09-12-day2.md
@@ -1,8 +1,22 @@
 ---
-title: Week 2
+title: Day 2
 layout: course_page
 categories:
  - content
 ---
 
-Articles will go here
+### Before class:
+
+Watch:  
+[TED: Big Data is Better Data](https://www.ted.com/talks/kenneth_cukier_big_data_is_better_data)
+
+Read:  
+Chapter 1 of Mayer-Schonberger and Cukier ([Partly available from Google Books](https://books.google.com/books?id=HpHcGAkFEjkC&printsec=frontcover#v=onepage&q&f=false))
+
+
+### Before next class:
+
+Watch:  
+[Tales of Big Data](https://www.youtube.com/watch?v=FLKzmswqF7E) from the course [Calling Bullshit](http://callingbullshit.org/)
+
+### Notes from class
