--- a/_posts/info/2000-01-01-info.md
+++ b/_posts/info/2000-01-01-info.md
@@ -23,6 +23,6 @@ Please feel free to come by without an appointment during this time. To talk wit
 
 **Class Days / Time:**  T/Th 12:30 - 1:45
 
-**Classroom:**  CBLS 252
+**Classroom:**  Pastore 259
 
 **Prerequisites:** None
