--- a/_posts/weeks/2017-09-12-day2.md
+++ b/_posts/weeks/2017-09-12-day2.md
@@ -20,3 +20,13 @@ Watch:
 [Tales of Big Data](https://www.youtube.com/watch?v=FLKzmswqF7E) from the course [Calling Bullshit](http://callingbullshit.org/)
 
 ### Notes from class
+
+[Notes](../day2notes)
+
+[Equifax data breach](https://www.nytimes.com/2017/09/07/business/equifax-cyberattack.html)
+
+[Maps of music popularity](https://www.nytimes.com/interactive/2017/08/07/upshot/music-fandom-maps.html)
+
+[Big Data Infographic](http://www.vcloudnews.com/wp-content/uploads/2015/04/big-data-infographic1.png)
+
+[Compare occupations of men and women](http://flowingdata.com/2017/09/11/most-female-and-male-occupations-since-1950/)
