--- a/_posts/weeks/2017-09-14-day3.md
+++ b/_posts/weeks/2017-09-14-day3.md
@@ -7,7 +7,7 @@ categories:
 
 ### Before class:
 
-[Justice: The Moral Side of Murder and What's the Right Thing to Do](http://justiceharvard.org/themoralsideofmurder/). Note the lecture is shown as one video of 55 minutes that includes two lectures.
+[Justice: The Moral Side of Murder and What's the Right Thing to Do](http://justiceharvard.org/themoralsideofmurder/). Note the lecture is shown as one video of 55 minutes that includes two lectures. If you can, please watch the next pair of lectures too (55 minutes). 
 
 [Tales of Big Data](https://www.youtube.com/watch?v=FLKzmswqF7E) from the course [Calling Bullshit](http://callingbullshit.org/)
 
