--- a/_posts/weeks/2017-09-14-day3.md
+++ b/_posts/weeks/2017-09-14-day3.md
@@ -11,6 +11,13 @@ categories:
 
 [Tales of Big Data](https://www.youtube.com/watch?v=FLKzmswqF7E) from the course [Calling Bullshit](http://callingbullshit.org/)
 
+### Articles for class:
+
+1. [Show us your ad data](https://www.bloomberg.com/view/articles/2017-09-13/facebook-and-google-show-us-your-ad-data)
+2. [How companies learn what to advertise](http://www.nytimes.com/2012/02/19/magazine/shopping-habits.html?pagewanted=1&_r=1&hp)
+3. [Computers can identify your sexuality](http://www.theweek.co.uk/88281/ai-technology-can-now-identify-signs-of-sexuality-but-do-we-want-it-to)
+
+
 
 ### Before next class:
 
