--- a/_posts/weeks/2017-09-14-day3.md
+++ b/_posts/weeks/2017-09-14-day3.md
@@ -17,11 +17,6 @@ categories:
 2. [How companies learn what to advertise](http://www.nytimes.com/2012/02/19/magazine/shopping-habits.html?pagewanted=1&_r=1&hp)
 3. [Computers can identify your sexuality](http://www.theweek.co.uk/88281/ai-technology-can-now-identify-signs-of-sexuality-but-do-we-want-it-to)
 
-
-
-### Before next class:
-
-Watch:  
-
-
 ### Notes from class
+
+[Notes](../day3notes)
