--- a/_posts/weeks/2017-09-19-day4.md
+++ b/_posts/weeks/2017-09-19-day4.md
@@ -12,3 +12,8 @@ Watch:
 
 Read:
 [Ethics and Big Data](http://www.sciencedirect.com/science/article/pii/S0160791X16301373)
+
+### In class:
+[Census scatterplots](http://104.236.197.250:3838/census-scatterplots/hello/)
+
+[Census maps](http://104.236.197.250/shiny/shiny-statistical-maps/hello/)
