--- a/_posts/weeks/2017-09-19-day4.md
+++ b/_posts/weeks/2017-09-19-day4.md
@@ -17,3 +17,5 @@ Read:
 [Census scatterplots](http://104.236.197.250:3838/census-scatterplots/hello/)
 
 [Census maps](http://104.236.197.250/shiny/shiny-statistical-maps/hello/)
+
+[Shrinking middle class article](https://www.ohio.com/akron/business/pew-study-finds-shrinking-middle-class-in-akron)
