--- a/_posts/weeks/2017-09-19-day4.md
+++ b/_posts/weeks/2017-09-19-day4.md
@@ -18,6 +18,8 @@ Read:
 
 [Census maps](http://104.236.197.250/shiny/shiny-statistical-maps/hello/)
 
+[Alt census maps](https://www.census.gov/geography/interactive-maps.html)
+
 [Shrinking middle class article](https://www.ohio.com/akron/business/pew-study-finds-shrinking-middle-class-in-akron)
 
 [What can you see? example](http://projects.flowingdata.com/america/unemployment/raw.html)
