--- a/_posts/weeks/2017-09-19-day4.md
+++ b/_posts/weeks/2017-09-19-day4.md
@@ -16,7 +16,11 @@ Read:
 ### In class:
 [Census scatterplots](http://104.236.197.250:3838/census-scatterplots/hello/)
 
+[Census scatterplots 2](http://159.203.72.28:3838/census-scatterplots/hello/)
+
 [Census maps](http://104.236.197.250/shiny/shiny-statistical-maps/hello/)
+
+[Census maps 2](http://159.203.72.28/shiny/shiny-statistical-maps/hello/)
 
 [Alt census maps](https://www.census.gov/geography/interactive-maps.html)
 
