--- a/_posts/weeks/2017-09-19-day4.md
+++ b/_posts/weeks/2017-09-19-day4.md
@@ -16,14 +16,16 @@ Read:
 ### In class:
 [Census scatterplots](http://104.236.197.250:3838/census-scatterplots/hello/)
 
-[Census scatterplots 2](http://159.203.72.28:3838/census-scatterplots/hello/)
-
 [Census maps](http://104.236.197.250/shiny/shiny-statistical-maps/hello/)
 
-[Census maps 2](http://159.203.72.28/shiny/shiny-statistical-maps/hello/)
-
-[Alt census maps](https://www.census.gov/geography/interactive-maps.html)
+[Gov't census maps](https://www.census.gov/geography/interactive-maps.html)
 
 [Shrinking middle class article](https://www.ohio.com/akron/business/pew-study-finds-shrinking-middle-class-in-akron)
 
 [What can you see? example](http://projects.flowingdata.com/america/unemployment/raw.html)
+
+### Notes
+
+[Notes](../day4notes)
+
+Note all the data underlying the selection of the [new Amazon headquarters](https://www.nytimes.com/interactive/2017/09/09/upshot/where-should-amazon-new-headquarters-be.html)
