--- a/_posts/info/2000-01-04-schedule.md
+++ b/_posts/info/2000-01-04-schedule.md
@@ -12,9 +12,9 @@ Date | Subject | Broad topic | Readings
 9/7 | Course intro: syllabus and writing rubrics
 9/12 | What is Big Data and why do we collect it? | Overview | M&C 1 
 9/14 | Ethical issues in big data |Ethics |
-9/19 | Government data collection: the census, crime, populations | |
+9/19 | Government data collection: the census | |
 9/21 | Government data collection: the census* |  Basic stats|  M&C 2
-9/26 | Use of data in decision-making | Basic policy
+9/26 | Government data use: crime and policing | 
 9/28 | Political polls** | Sampling | M&C 3
  | Advertising | Correlation | M&C 4
  | Genome Sequencing | Data organization | M&C 5
@@ -28,5 +28,5 @@ Date | Subject | Broad topic | Readings
  | Social media | Data availability | O'Neill 4
 
 *Guest lecturer from the Library  
-**Guest lecturer from Political Science
+**Guest lecturer from Political Science  
 ***Guest lecturer from Business
