add day 6 data link

--- a/_posts/weeks/2017-09-26-day6.md
+++ b/_posts/weeks/2017-09-26-day6.md
@@ -22,4 +22,8 @@ Read:
 
 O'Neill chapter 4. You might need to read the early chapters to understand some of the references in this chapter.
 
+### In class links
+
+[Philadephia crime visualization](http://104.236.197.250:3838/Philadelphia-Crime-Visualizations/)
+
 ### Notes from class
