--- a/_posts/weeks/2017-09-26-day6.md
+++ b/_posts/weeks/2017-09-26-day6.md
@@ -25,6 +25,7 @@ O'Neill chapter 4. You might need to read the early chapters to understand some 
 ### In class links
 
 [Philadephia crime visualization](http://104.236.197.250:3838/Philadelphia-Crime-Visualizations/)
-[alt link](https://miningthedetails.shinyapps.io/PhilaCrime/)
 
 ### Notes from class
+
+[Notes](../day6notes)
