fix day 6 reading

--- a/_posts/weeks/2017-09-26-day6.md
+++ b/_posts/weeks/2017-09-26-day6.md
@@ -20,7 +20,7 @@ Read:
 
 [Risk assessment when deciding bail](https://www.nytimes.com/2015/06/27/us/turning-the-granting-of-bail-into-a-science.html)
 
-O'Neill chapter 4. You might need to read the early chapters to understand some of the references in this chapter.
+O'Neill chapter 5 (Civilian Casualties). You might need to read the early chapters to understand some of the references in this chapter.
 
 ### In class links
 
