--- a/_posts/weeks/2017-09-28-day7.md
+++ b/_posts/weeks/2017-09-28-day7.md
@@ -11,4 +11,6 @@ Read:
 
 [The Media has a Probability Problem](https://fivethirtyeight.com/features/the-media-has-a-probability-problem/)
 
+Anything you missed from Day 6.
+
 ### Notes from class
