--- a/_posts/weeks/2017-10-03-day8.md
+++ b/_posts/weeks/2017-10-03-day8.md
@@ -14,4 +14,14 @@ Read:
 O'Neill chapter 4  
 M&C chapter 4
 
+### Links in class
+[OCEAN personality test](https://ocean.cambridgeanalytica.org/)
+[Personality from twitter text](https://personality-insights-livedemo.mybluemix.net/)
+[How personality is inferred from text](https://console.bluemix.net/docs/services/personality-insights/science.html#researchInfer)
+[Personality from Facebook likes](https://applymagicsauce.com/)
+
+[Work with advertising data](http://104.236.197.250/shiny/radiant/inst/app/)
+[Instructions for advertising data](../day8inclass)
+
+
 ### Notes from class
