--- a/_posts/weeks/2017-10-03-day8.md
+++ b/_posts/weeks/2017-10-03-day8.md
@@ -24,7 +24,7 @@ M&C chapter 4
 [Work with advertising data - link 2](http://104.131.110.228/shiny/radiant/inst/app/)  
 [Work with advertising data - link 3](http://104.131.22.26/shiny/radiant/inst/app/)  
 [Work with advertising data - link 4](http://104.131.110.163/shiny/radiant/inst/app/)  
-[Instructions for advertising data](../day8inclass)
+[Instructions for advertising data](../day8inclass/)
 
 
 ### Notes from class
