--- a/_posts/weeks/2017-10-05-day9.md
+++ b/_posts/weeks/2017-10-05-day9.md
@@ -16,4 +16,4 @@ categories:
 [Instructions for advertising data](../day8inclass/)
 
 ### Slides from class
-[Regression slides](../regression.html)
+<a href="{{ site.baseurl }}/_posts/_weeks/regression.html"  target="_blank">Regression slides</a>
