--- a/_posts/weeks/2017-10-10-day10.md
+++ b/_posts/weeks/2017-10-10-day10.md
@@ -1,5 +1,5 @@
 ---
-title: Day 9
+title: Day 10
 layout: course_page
 categories:
  - content
@@ -7,13 +7,6 @@ categories:
 
 ### Before class:
 
-* Catch up on readings you didn't finish
-* Look at the data on the server
-
-### Links in class
-[Work with advertising data](http://104.236.197.250/shiny/radiant/inst/app/)  
-[Alt server data](https://vnijs.shinyapps.io/radiant/)  
-[Instructions for advertising data](../day8inclass/)
-
-### Slides from class
-[Regression slides](/BIO181G/regression.html)
+* [Improving on Google Flu](https://arstechnica.com/science/2015/11/new-flu-tracker-uses-google-search-data-better-than-google/)
+* [The Parable of Google Flu](http://science.sciencemag.org/content/343/6176/1203.full)
+* [Google Flu and Correlations - the comic](https://www.google.com/trends/correlate/comic)
