--- a/_posts/weeks/2017-10-10-day10.md
+++ b/_posts/weeks/2017-10-10-day10.md
@@ -10,3 +10,8 @@ categories:
 * [The Parable of Google Flu](http://science.sciencemag.org/content/343/6176/1203.full)
 * [Improving on Google Flu](https://arstechnica.com/science/2015/11/new-flu-tracker-uses-google-search-data-better-than-google/)
 * [Google Flu and Correlations - the comic](https://www.google.com/trends/correlate/comic)
+
+### Links
+[Correlations with observed flu](https://www.google.com/trends/correlate/search?e=id:20xKcnNqHrk&t=weekly)  
+[CDC Flu 2016-2017](https://www.cdc.gov/flu/weekly/index.htm)  
+[CDC data to upload to Google](/BIO181G/flu16-17.csv)
