--- a/_posts/weeks/2017-10-10-day10.md
+++ b/_posts/weeks/2017-10-10-day10.md
@@ -13,5 +13,14 @@ categories:
 
 ### Links
 [Correlations with observed flu](https://www.google.com/trends/correlate/search?e=id:20xKcnNqHrk&t=weekly)  
+  * click search terms (center-top in blue) to view apparent correlations
+[Recent CDC data to upload to Google Correlate](/BIO181G/flu16-17.csv)
 [CDC Flu 2016-2017](https://www.cdc.gov/flu/weekly/index.htm)  
-[CDC data to upload to Google](/BIO181G/flu16-17.csv)
+* Click to save to you computer
+* On the correlation site
+  * click Edit this data
+  * click Choose File
+  * select the file you saved
+  * click Search Correlations
+  * highlight the right-hand section of the graph, which is the past year
+  * click search terms to view apparent correlations
