--- a/_posts/weeks/2017-10-10-day10.md
+++ b/_posts/weeks/2017-10-10-day10.md
@@ -16,7 +16,7 @@ categories:
   * click search terms (center-top in blue) to view apparent correlations
 [Recent CDC data to upload to Google Correlate](/BIO181G/flu16-17.csv)
 [CDC Flu 2016-2017](https://www.cdc.gov/flu/weekly/index.htm)  
-* Click to save to you computer
+* Click to save to your computer
 * On the correlation site
   * click Edit this data
   * click Choose File
