--- a/_posts/weeks/2017-10-10-day10.md
+++ b/_posts/weeks/2017-10-10-day10.md
@@ -26,3 +26,6 @@ categories:
   * click Search Correlations
   * highlight the right-hand section of the graph, which is the past year
   * click search terms to view apparent correlations
+
+### Notes
+[Notes](../day10notes)
