--- a/_posts/weeks/2017-10-12-day11.md
+++ b/_posts/weeks/2017-10-12-day11.md
@@ -8,7 +8,13 @@ categories:
 ### Before class:
 
 Watch:  
-[Big Data in Healthcare](https://www.ted.com/talks/joel_selanikio_the_surprising_seeds_of_a_big_data_revolution_in_healthcare/transcript)
+[Big Data in Healthcare](https://www.ted.com/talks/joel_selanikio_the_surprising_seeds_of_a_big_data_revolution_in_healthcare)
+
+[Sharing medical data](https://www.ted.com/talks/john_wilbanks_let_s_pool_our_medical_data)
+
+[The quantified self](https://www.ted.com/talks/gary_wolf_the_quantified_self)
+
+[The future of medical data](https://www.ted.com/talks/eric_topol_the_wireless_future_of_medicine)
 
 ### Links
 
