--- a/_posts/weeks/2017-10-12-day11.md
+++ b/_posts/weeks/2017-10-12-day11.md
@@ -17,6 +17,6 @@ Watch:
 [The future of medical data](https://www.ted.com/talks/eric_topol_the_wireless_future_of_medicine)
 
 ### Links
-
+[Predicting heart disease](https://honto-ming.shinyapps.io/Coursera_DevDataProd_Proj/)
 
 ### Notes
