--- a/_posts/weeks/2017-10-26-day15.md
+++ b/_posts/weeks/2017-10-26-day15.md
@@ -8,4 +8,7 @@ categories:
 ### Before class:
 
 Watch:  
-[Genomics - the basics](https://www.ted.com/talks/barry_schuler_genomics_101)
+[Genomics 101](https://www.ted.com/talks/barry_schuler_genomics_101)
+
+Read:  
+[What DNA testing might tell you](https://www.washingtonpost.com/graphics/2017/lifestyle/she-thought-she-was-irish-until-a-dna-test-opened-a-100-year-old-mystery/?utm_term=.c26ea6cbb2f5)
