--- a/_posts/weeks/2017-10-26-day15.md
+++ b/_posts/weeks/2017-10-26-day15.md
@@ -23,3 +23,6 @@ Read:
 [Comparing genomes](http://civi.cmbi.ru.nl/)  
 [Genomes in cancer](http://pcawgscout.bioinfo.cnio.es/)  
 [Correlating genomic data with phenotype](https://xenabrowser.net/heatmap/)
+
+### Notes
+[Notes](../day15notes)
