--- a/_posts/info/2000-01-04-schedule.md
+++ b/_posts/info/2000-01-04-schedule.md
@@ -9,24 +9,35 @@ categories:
 
 Date | Subject | Broad topic | Readings
  --- | --- | --- | ---
-9/7 | Course intro: syllabus and writing rubrics
-9/12 | What is Big Data and why do we collect it? | Overview | M&C 1 
-9/14 | Ethical issues in big data |Ethics |
-9/19 | Government data collection: the census | |
-9/21 | Government data collection: the census* |  Basic stats|  M&C 2
-9/26 | Government data use: crime and policing | 
-9/28 | Political polls** | Sampling | M&C 3
- | Advertising | Correlation | M&C 4
- | Genome Sequencing | Data organization | M&C 5
- | Sports | Probabilities |M&C 7-8|
- | Medicine | Causation | O'Neill 5
- | Healthcare | Calculating risk |  O'Neill 6
- | The parable of Google Flu | Algorithms|M&C afterword
- | Business*** | Optimization | O'Neill 7, 11
- | Financing and hiring  | Bias | O'Neill Intro
- | Social media | Privacy and Ethics | M&C 9, O'Neill 10 
- | Social media | Data availability | O'Neill 4
+1: 9/7 | Course intro: syllabus and writing rubrics|
+2: 9/12 | What is Big Data and why do we collect it? | Overview | M&C 1
+3: 9/14 | Ethical issues in big data |Ethics | O'Neill 10
+4: 9/19 | Government data collection: the census | |
+5: 9/21 | Using government data: gerrymandering* | |  
+6: 9/26 | Government data use: crime and policing | |O'Neill 5
+7: 9/28 | Political polls** | Sampling |
+8: 10/3 | Advertising | Models | O'Neill 4, M&C 4
+9: 10/5 | Advertising | Models | 
+10: 10/10| The parable of Google Flu | |
+11: 10/12 | Healthcare |  |  
+12: 10/17 | Medical Data | | O'Neill 8
+13: 10/19 | Medical image data |  Machine learning ||
+14: 10/24 | Medical Data | | O'Neill 9
+15: 10/26 | Genome Sequencing |  | 
+16: 10/31 | Using genomic data | |
+17: 11/2 | Biodiversity |  |
+18: 11/7 | Biodiversity |  |
+19: 11/9 |Cities eg transportation||
+20: 11/14 |Cities eg transportation||
+21: 11/16 | Business*** | Optimization | O'Neill 7, 11
+22: 11/21 | Business | Optimization | O'Neill 7, 11
+23: 11/28 | Financing and hiring  | Bias | O'Neill Intro
+24: 11/30 | Financing and hiring  | Bias | O'Neill Intro
+25: 12/5 | Sports | Probabilities |M&C 7-8|
+26: 12/7 | Sports | Probabilities |M&C 7-8|
 
 *Guest lecturer from the Library  
 **Guest lecturer from Political Science  
 ***Guest lecturer from Business
+
+  
