--- a/_posts/weeks/2017-10-31-day16.md
+++ b/_posts/weeks/2017-10-31-day16.md
@@ -19,6 +19,8 @@ Catch up!
   * Passing on traits
 * Linking traits to genes
   * Genome wide association studies
+  * Correlation
+  * Effect size
 * Microbiomes
   * Links to disease and health
   * Role in the environment
@@ -52,3 +54,5 @@ Catch up!
   * "Safety" requirements
 
 ### Notes
+[Notes on what we do with genomes](../day16notes)
+[Notes on ethical issues with genomics](../day16notes2)
