--- a/_posts/weeks/2017-11-02-day17.md
+++ b/_posts/weeks/2017-11-02-day17.md
@@ -25,3 +25,6 @@ Watch:
 * How were these data collected?
 * Are there any ethical concerns about the collection or use of these data?
 * If there’s a model how is it constructed?
+
+### Notes
+[Notes](../day17notes)
