--- a/_posts/weeks/2017-11-07-day18.md
+++ b/_posts/weeks/2017-11-07-day18.md
@@ -16,3 +16,17 @@ Watch:
 ### Data for class:
 
 [Ethics of ebird](http://www.onlineethics.org/Resources/40348/40548.aspx)
+
+[Biodiversity case studies](http://www.sanbi.org/news/ten-compelling-case-studies-making-case-biodiversity)
+
+[iNaturalist data use](../day18iNat)
+
+* Summarize the case study
+* Who is collecting the data?
+* How are the data collected?
+* Are there correlations among variables?
+* If the research is small-scale could new tools make it possible to scale up?
+* Are there ethical concerns about biodiversity in this case study?
+* Is there financial benefit to biodiversity in this case?
+* Is there intrinsic benefit?
+* Answer any questions that are posed by the case study
