--- a/_posts/weeks/2017-11-07-day18.md
+++ b/_posts/weeks/2017-11-07-day18.md
@@ -30,3 +30,7 @@ Watch:
 * Is there financial benefit to biodiversity in this case?
 * Is there intrinsic benefit?
 * Answer any questions that are posed by the case study
+
+### Extra reading for fun
+[Aligning marine species range data to better serve science and conservation](http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0175739)  
+* Incorporates two different methods of predicting species ranges for species management
