--- a/_posts/weeks/2017-11-07-day18iNat.md
+++ b/_posts/weeks/2017-11-07-day18iNat.md
@@ -1,3 +1,8 @@
+---
+title: Day 18 - iNaturalist case study
+layout: course_page
+---
+
 There are endless questions that could be investigated using iNaturalist data and field observations.
 Today, we will investigate the following questions:
 * How do the number of observations and number of species change over different geographic
