--- a/_posts/weeks/2017-11-07-day18.md
+++ b/_posts/weeks/2017-11-07-day18.md
@@ -31,6 +31,10 @@ Watch:
 * Is there intrinsic benefit?
 * Answer any questions that are posed by the case study
 
+### Notes from class
+
+[Notes](../day18notes)
+
 ### Extra reading for fun
 [Aligning marine species range data to better serve science and conservation](http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0175739)  
 * Incorporates two different methods of predicting species ranges for species management
