--- a/_posts/weeks/2017-11-09-day19.md
+++ b/_posts/weeks/2017-11-09-day19.md
@@ -46,4 +46,8 @@ To get you started:
 [General info](http://hockeyanalytics.com/)
 
 #### Tennis
-[App](https://h3nrycrosby.shinyapps.io/tennis_shiny_app/)  
+[App](https://h3nrycrosby.shinyapps.io/tennis_shiny_app/) 
+ 
+### Notes from class
+
+[Notes](../day19notes)
