--- a/_posts/weeks/2017-11-14-day20.md
+++ b/_posts/weeks/2017-11-14-day20.md
@@ -6,7 +6,7 @@ categories:
 ---
 
 ### Slides
-[Review and sports](/BIO181G/review_plus_baseball)
+[Review and sports](/BIO181G/review_plus_baseball.pdf)
 
 ### Useful reading
 [Get the most out of analytics](https://www.fangraphs.com/tht/how-teams-can-get-the-most-out-of-analytics/)
