--- a/_posts/weeks/2017-11-21-day22.md
+++ b/_posts/weeks/2017-11-21-day22.md
@@ -18,3 +18,7 @@ categories:
 [People analytics](https://venturebeat.com/2011/09/20/people-analytics-google-hr/)
 
 [Promotions](https://qz.com/299112/google-came-up-with-a-formula-for-deciding-who-gets-promoted-heres-what-happened/)
+
+### Followup 
+
+Read: O'Neill chapter 7
