--- a/_posts/weeks/2017-11-21-day22.md
+++ b/_posts/weeks/2017-11-21-day22.md
@@ -19,6 +19,9 @@ categories:
 
 [Promotions](https://qz.com/299112/google-came-up-with-a-formula-for-deciding-who-gets-promoted-heres-what-happened/)
 
+[Video from class: analytics for business success](https://www.youtube.com/watch?v=XojhyhoRI7I)
+
+
 ### Followup 
 
 Read: O'Neill chapter 7
