--- a/_posts/weeks/2017-11-28-day23.md
+++ b/_posts/weeks/2017-11-28-day23.md
@@ -12,3 +12,9 @@ Watch:
 
 Read:  
 [Public transportation in BC](https://dsi.ubc.ca/sites/dsi.ubc.ca/files/dssg_final_report_open_transit.pdf)
+
+### In class
+
+[NYC Data](http://iquantny.tumblr.com/tagged/visionzero)  
+[Uber increases traffic](http://www.nydailynews.com/opinion/turns-uber-clogging-streets-article-1.2981765)
+[NYC accidents](https://nycdatascience.com/blog/student-works/r-visualization/interactive-visualizations-nyc-traffic-accidents-r-shiny/)
