--- a/_posts/weeks/2017-11-28-day23.md
+++ b/_posts/weeks/2017-11-28-day23.md
@@ -18,3 +18,7 @@ Read:
 [NYC Data](http://iquantny.tumblr.com/tagged/visionzero)  
 [Uber increases traffic](http://www.nydailynews.com/opinion/turns-uber-clogging-streets-article-1.2981765)  
 [NYC accidents](https://nycdatascience.com/blog/student-works/r-visualization/interactive-visualizations-nyc-traffic-accidents-r-shiny/)
+
+### Notes
+
+[Notes](../day23notes)
