--- a/_posts/weeks/2017-11-30-day24.md
+++ b/_posts/weeks/2017-11-30-day24.md
@@ -12,6 +12,8 @@ Read the following article and skim the comments. How do you feel about the prop
 
 [Analysis of comments](https://public.tableau.com/views/NYT-comments/Dashboard?:embed=y&:showVizHome=no&:showTabs=y&:display_count=y&:display_static_image=y&:bootstrapWhenNotified=true#5)
 
+[How it works](https://juliasilge.com/blog/joy-to-the-world/)
+
 ### Class Part II
 
 [Transit use in the US](https://fivethirtyeight.com/features/how-your-citys-public-transit-stacks-up/)
