--- a/_posts/weeks/2017-11-30-day24.md
+++ b/_posts/weeks/2017-11-30-day24.md
@@ -34,3 +34,6 @@ Read the following article and skim the comments. How do you feel about the prop
 ### Notes
 
 [Notes](../day24notes)
+
+### Interesting extenstion to analyzing text
+[Finding fake comments submitted to the government](https://hackernoon.com/more-than-a-million-pro-repeal-net-neutrality-comments-were-likely-faked-e9f0e3ed36a6)
