--- a/_posts/info/2000-01-01-info.md
+++ b/_posts/info/2000-01-01-info.md
@@ -5,9 +5,9 @@ categories:
  - info
 ---
 
-**BIO 181G**  
-**The information age: from politics to medicine**  
-**Fall 2017**
+**BIO 439 / 539**  
+**Big Data Analysis**  
+**Spring 2018**
 
 **Instructor:** Dr. Rachel Schwartz
 
@@ -18,11 +18,11 @@ categories:
 **Email:** rsschwartz@uri.edu  
 Please note that I will do my best to respond promptly between 9-5 on weekdays.
 
-**Office Hours:**  Tue 2 - 3 and Wed 1 - 2  
+**Office Hours:**  Th 3 - 4 
 Please feel free to come by without an appointment during this time. To talk with me during other times please set up a meeting by email.
 
-**Class Days / Time:**  T/Th 12:30 - 1:45
+**Class Days / Time:**  T/Th 1:30 - 2:45
 
-**Classroom:**  Pastore 259
+**Classroom:**  Coastal Institute (Kingston) 117A
 
-**Prerequisites:** None
+**Prerequisites:** Junior standing and MTH 131 or instructor permission / Graduate Standing 
