--- a/_posts/info/2000-01-02-goals.md
+++ b/_posts/info/2000-01-02-goals.md
@@ -7,22 +7,19 @@ categories:
 
 **Course Goals**
 
-In this course students will learn ...
-
-* the strengths and limitations of using data to understand the world
-* different fields where big data is being gathered and used
-- controversies surrounding the collection and use of data, and potential ethical implications
-- how algorithms generate ideas from data
-- to evaluate which data are appropriate for which questions
-- to communicate the above goals in writing
-
+At the end of this course students should be able to...
+* understand methods to analyze large datasets and how they differ from analysis of smaller datasets.
+* effectively manage and analyze data.
+* apply the tools learned in class to research.
 
 **Student Learning Outcomes**
 
 At the end of this course students should be able to...
+     
+* write a script to visualize a dataset.
+* select appropriate statistical methods to produce unbiased results for a dataset. 
+* document code so that it is readable to someone else.
+* **produce a completely replicable analysis associated with a research project for a dataset of any size**.
+* **produce a research paper directly incorporating results of analyses from code**.
 
-- explain how data are produced and what makes data trustworthy and reliable
-- appreciate how data can be used to enhance our understanding of our world and in decision-making
-- critically evaluate the presentation and use of data by others
-- understand when data and algorithms are used appropriately and ethically
-- demonstrate that they have accomplished the above learning outcomes in a paper
+*bold items refer to goals for students in BIO 539.
