--- a/_posts/info/2000-01-03-texts.md
+++ b/_posts/info/2000-01-03-texts.md
@@ -5,12 +5,30 @@ categories:
  - info
 ---
 
-**Required texts**
+**Required texts - available free online**
 
-Big Data: A Revolution That Will Transform How We Live, Work, and Think. Viktor Mayer-Schönberger and Kenneth Cukier. 2013. Houghton Mifflin Harcourt. (M&C in Readings list).  
-Available on Kindle
+R for Data Science. Hadley Wickham and Garrett Grolemund. 2016. O’Reilly Media. Free online at http://r4ds.had.co.nz/
 
-Weapons of Math Destruction. Cathy O'Neil. 2016. Random House.  
-Available on Kindle
+Data Science from Scratch. Joel Grus. 2015. O’Reilly Media. Free online via the library and Safari Books.
 
-Additional readings will be assigned as events occur and are reported in the news.
+The Practice of Reproducible Research. Justin Kitzes, Daniel Turek, Fatma Deniz (Eds.) 2017. UC Press. Free online at https://www.practicereproducibleresearch.org/
+
+A Whirlwind Tour of Python. Jake VanderPlas. 2016. Free online at https://github.com/jakevdp/WhirlwindTourOfPython
+
+Python Data Science Handbook. Jake VanderPlas. 2017. O'Reilly Media. Free online at https://github.com/jakevdp/PythonDataScienceHandbook
+
+**Useful supplementary reads**
+
+Bioinformatics Data Skills. Vince Buffalo. 2015. O'Reilly Media.
+
+Data Science at the Command Line. Jeroen Janssens. 2014. O'Reilly Media. 
+
+Doing Data Science. Rachel Schutt and Cathy O'Neill. 2013. O'Reilly Media.
+
+Big Data and Social Science: A Practical Guide to Methods and Tools. 2016. Ian Foster, Rayid Ghani, Ron S. Jarmin, Frauke Kreuter, and Julia Lane, eds. CRC Press.
+
+On Being a Data Skeptic. Cathy O'Neil. 2013. O'Reilly Media.
+
+**Other equipment / material requirements**
+
+Mac, Linux, or Windows laptop (not a tablet, Chromebook, etc.) with administrative privileges. Please contact the instructor if you do not have a laptop and purchasing one would be a financial difficulty.
