--- a/_posts/info/2000-01-04-schedule.md
+++ b/_posts/info/2000-01-04-schedule.md
@@ -5,39 +5,31 @@ categories:
  - info
 ---
 
-### Meeting Schedule
+**Meeting Schedule**
 
-Date | Subject | Broad topic | Readings
- --- | --- | --- | ---
-1: 9/7 | Course intro: syllabus and writing rubrics|
-2: 9/12 | What is Big Data and why do we collect it? | Overview | M&C 1
-3: 9/14 | Ethical issues in big data |Ethics | O'Neill 10
-4: 9/19 | Government data collection: the census | |
-5: 9/21 | Using government data: gerrymandering* | |  
-6: 9/26 | Government data use: crime and policing | |O'Neill 5
-7: 9/28 | Political polls** | Sampling |
-8: 10/3 | Advertising | Models | O'Neill 4, M&C 4
-9: 10/5 | Advertising | Models | 
-10: 10/10| The parable of Google Flu | |
-11: 10/12 | Healthcare |  |  
-12: 10/17 | Medical Data | | O'Neill 8
-13: 10/19 | Medical image data |  Machine learning ||
-14: 10/24 | Medical Data | | O'Neill 9
-15: 10/26 | Genome Sequencing |  | 
-16: 10/31 | Using genomic data | |
-17: 11/2 | Biodiversity |  |
-18: 11/7 | Biodiversity |  |
-19: 11/9 |Cities eg transportation||
-20: 11/14 |Cities eg transportation||
-21: 11/16 | Business*** | Optimization | O'Neill 7, 11
-22: 11/21 | Business | Optimization | O'Neill 7, 11
-23: 11/28 | Financing and hiring  | Bias | O'Neill Intro
-24: 11/30 | Financing and hiring  | Bias | O'Neill Intro
-25: 12/5 | Sports | Probabilities |M&C 7-8|
-26: 12/7 | Sports | Probabilities |M&C 7-8|
-
-*Guest lecturer from the Library  
-**Guest lecturer from Political Science  
-***Guest lecturer from Business
-
-  
+| Week | Topic   | Process  | Readings      | Assignment   |
+| ---- | ------------ | ---------- | ------------- | ---- |
+| 1   | Introduction / Software installation     | | Kitzes et al. P1| |
+|| Automating repetitive tasks | Intro to the command line | Buffalo Ch. 3 |                       |
+| 2   | Automating repetitive tasks  | Shell scripts | Buffalo Ch. 7 | Commenting a shell script |
+| 3   | Big data and answerable questions   | Discussion of your research  | Buffalo Ch. 1 |                           |
+|      | High performance computing  | Intro to the cluster | Buffalo Ch. 4 ||
+| 4   | Sharing, collaboration, and research transparancy | Git| Buffalo Ch. 5 | Share your git repo       |
+| 5   | Coding for data analysis| Intro to R and RStudio| Buffalo Ch. 8 ||
+|    | Data organization and management|R: functions|Buffalo Ch. 2, Kitzes P1||
+||Data visualization for exploration| R: ggplot2| Wickham ch.2,3,28 | |
+| 6    | Good data practice | R Markdown| Wickham ch. 27,29,30 |Exploratory analysis|
+|| Analyzing data by category|R: plyr/dplyr | Wickham ch. 5 | |
+| 7 | Tidy Data and Relational data|R: dplyr,tidyr| Wickham ch. 12,13
+|    | Testing and Scripting|R - shell  | Buffalo ch. 8 |     |
+| 8   | Post break recap
+||Appropriate analyses and statistics      ||Foster et al.  |
+| 9    | Automating repetitive tasks| Python: intro| Grus Ch. 2 / Vanderplas: whirlwind  |                              |
+||Pattern counting |Python: basics|Vanderplas ch. 1|Pattern counting|
+| 10   | Data structures and complex data| Python: pandas |Vanderplas ch. 2-3||
+|11    | Packaging complex data| Python: pandas joins|||
+|   | Review and work on projects| || Complete data analysis    |
+| 12   | Making sure it's right   | Python: tests  | Buffalo: p.13              ||
+|   | Command line   |  Python: scripts and tests                |              ||
+| 13   | Visualization   | Python: matplotlib | Vanderplas ch. 4  ||
+|   |SQL, Wrap up, evaluations  ||
