--- a/_posts/info/2000-01-07-policies.md
+++ b/_posts/info/2000-01-07-policies.md
@@ -29,7 +29,16 @@ If you need to miss class for any sanctioned reason (e.g. religious holiday, Uni
 
 **Classroom Protocol**
 
-- Be prepared to discuss assigned readings.
-- Be kind to others. Remember that people have different backgrounds and experiences.
-- If you must come in late, please do not disrupt the class.  Please ensure all cell phones, pagers, and other electronic devices are set to silent.
-- Students are expected to come to class. If you are unable to attend due to illness, severe weather, religious holiday, personal or family emergency, or sanctioned University event please let me know as soon as possible.
+Bring your laptop to class every day.
+
+* Install programs prior to class if required. Class time will not be spent on installation except for the first day.
+
+* Be prepared to discuss datasets and results from in-class work.
+
+* Be kind to others. Remember that people have different backgrounds and experiences with the material. Students who learn the material faster should consider helping others (teaching is an excellent way to improve your understanding of the material).
+
+* If you must come in late, please do not disrupt the class. Please ensure all cell phones, pagers, and other electronic devices are set to silent.
+
+* Students are expected to come to class. Work on assignments will be done in class. If you are unable to attend due to illness, severe weather, religious holiday, personal or
+family emergency, or sanctioned University event please let me know as soon as possible
+to arrange assistance in learning the material to complete the assignment.
