update day 1 setup

--- a/_posts/weeks/2018-01-23-day1.md
+++ b/_posts/weeks/2018-01-23-day1.md
@@ -5,23 +5,8 @@ categories:
  - content
 ---
 
-### In class readings:
+### Class background:
 
-Parts 1-4 of  
-[Bikes on the Fremont Bridge](https://www.seattlebikeblog.com/2014/06/09/a-statistical-analysis-of-biking-on-the-fremont-bridge-part-1-overview/)
 
-[NYTimes: Will You Graduate - Ask Big Data](https://www.nytimes.com/2017/02/02/education/edlife/will-you-graduate-ask-big-data.html)
-
-### Before next class:
-
-Watch:  
-[TED: Big Data is Better Data](https://www.ted.com/talks/kenneth_cukier_big_data_is_better_data)
-
-Read:  
-Chapter 1 of Mayer-Schonberger and Cukier ([Partly available from Google Books](https://books.google.com/books?id=HpHcGAkFEjkC&printsec=frontcover#v=onepage&q&f=false))
-
-### Notes from class
-
-[Why this class](../day1notes)
-
-[Your thoughts on writing](../rubricnotes)
+### Link to setup:
+[Setup](https://rachelss.github.io/BigDataSetup/)
