update day 1 reading

--- a/_posts/weeks/2018-01-23-day1.md
+++ b/_posts/weeks/2018-01-23-day1.md
@@ -10,3 +10,7 @@ categories:
 
 ### Link to setup:
 [Setup](https://rachelss.github.io/BigDataSetup/)
+
+### Reading:
+[Why reproducible research](https://www.practicereproducibleresearch.org/core-chapters/0-preface.html)  
+[Intro to reproducible research](https://www.practicereproducibleresearch.org/core-chapters/1-intro.html)
