update day 1 reading

--- a/_posts/info/2000-01-04-schedule.md
+++ b/_posts/info/2000-01-04-schedule.md
@@ -9,7 +9,7 @@ categories:
 
 | Week | Topic   | Process  | Readings      | Assignment   |
 | ---- | ------------ | ---------- | ------------- | ---- |
-| 1   | Introduction / Software installation     | | Kitzes et al. P1| |
+| 1   | Introduction / Software installation     | | Kitzes et al. ch. [0](https://www.practicereproducibleresearch.org/core-chapters/0-preface.html), [1](https://www.practicereproducibleresearch.org/core-chapters/1-intro.html)| |
 || Automating repetitive tasks | Intro to the command line | Buffalo Ch. 3 |                       |
 | 2   | Automating repetitive tasks  | Shell scripts | Buffalo Ch. 7 | Commenting a shell script |
 | 3   | Big data and answerable questions   | Discussion of your research  | Buffalo Ch. 1 |                           |
