--- a/_posts/info/2000-01-03-texts.md
+++ b/_posts/info/2000-01-03-texts.md
@@ -7,15 +7,15 @@ categories:
 
 **Required texts - available free online**
 
-R for Data Science. Hadley Wickham and Garrett Grolemund. 2016. O’Reilly Media. Free online at http://r4ds.had.co.nz/
+[The Practice of Reproducible Research](https://www.practicereproducibleresearch.org/). Justin Kitzes, Daniel Turek, Fatma Deniz (Eds.) 2017. UC Press.
 
-Data Science from Scratch. Joel Grus. 2015. O’Reilly Media. Free online via the library and Safari Books.
+[R for Data Science](http://r4ds.had.co.nz/). Hadley Wickham and Garrett Grolemund. 2016. O’Reilly Media.
 
-The Practice of Reproducible Research. Justin Kitzes, Daniel Turek, Fatma Deniz (Eds.) 2017. UC Press. Free online at https://www.practicereproducibleresearch.org/
+Data Science from Scratch. Joel Grus. 2015. O’Reilly Media. Free online via the URI library and Safari Books. Search the URI library for the title and follow the links.
 
-A Whirlwind Tour of Python. Jake VanderPlas. 2016. Free online at https://github.com/jakevdp/WhirlwindTourOfPython
+[A Whirlwind Tour of Python](https://github.com/jakevdp/WhirlwindTourOfPython). Jake VanderPlas. 2016.
 
-Python Data Science Handbook. Jake VanderPlas. 2017. O'Reilly Media. Free online at https://github.com/jakevdp/PythonDataScienceHandbook
+[Python Data Science Handbook](https://github.com/jakevdp/PythonDataScienceHandbook). Jake VanderPlas. 2017. O'Reilly Media. 
 
 **Useful supplementary reads**
 
