update date 2 and 3

--- a/_posts/info/2000-01-04-schedule.md
+++ b/_posts/info/2000-01-04-schedule.md
@@ -10,8 +10,8 @@ categories:
 | Week | Topic   | Process  | Readings      | Assignment   |
 | ---- | ------------ | ---------- | ------------- | ---- |
 | 1   | Introduction / Software installation     | | Kitzes et al. ch. [0](https://www.practicereproducibleresearch.org/core-chapters/0-preface.html), [1](https://www.practicereproducibleresearch.org/core-chapters/1-intro.html)| |
-|| Automating repetitive tasks | Intro to the command line | Buffalo Ch. 3 (Sakai) |                       |
-| 2   | Automating repetitive tasks  | Shell scripts | Buffalo Ch. 7 | Commenting a shell script |
+|  | Automating repetitive tasks | Intro to the command line | Buffalo Ch. 3 (Sakai)| |
+| 2   | Automating repetitive tasks  | Shell scripts | Buffalo Ch. 7 (Sakai) | Commenting a shell script |
 | 3   | Big data and answerable questions   | Discussion of your research  | Buffalo Ch. 1 |                           |
 |      | High performance computing  | Intro to the cluster | Buffalo Ch. 4 ||
 | 4   | Sharing, collaboration, and research transparancy | Git| Buffalo Ch. 5 | Share your git repo       |
