--- a/_posts/info/2000-01-03-texts.md
+++ b/_posts/info/2000-01-03-texts.md
@@ -5,7 +5,7 @@ categories:
  - info
 ---
 
-**Required texts - available free online**
+#### Required texts - available free online
 
 [The Practice of Reproducible Research](https://www.practicereproducibleresearch.org/). Justin Kitzes, Daniel Turek, Fatma Deniz (Eds.) 2017. UC Press.
 
@@ -17,7 +17,7 @@ Data Science from Scratch. Joel Grus. 2015. O’Reilly Media. Free online via th
 
 [Python Data Science Handbook](https://github.com/jakevdp/PythonDataScienceHandbook). Jake VanderPlas. 2017. O'Reilly Media. 
 
-**Useful supplementary reads**
+#### Useful supplementary reads
 
 Bioinformatics Data Skills. Vince Buffalo. 2015. O'Reilly Media.
 
@@ -29,6 +29,6 @@ Big Data and Social Science: A Practical Guide to Methods and Tools. 2016. Ian F
 
 On Being a Data Skeptic. Cathy O'Neil. 2013. O'Reilly Media.
 
-**Other equipment / material requirements**
+#### Other equipment / material requirements
 
 Mac, Linux, or Windows laptop (not a tablet, Chromebook, etc.) with administrative privileges. Please contact the instructor if you do not have a laptop and purchasing one would be a financial difficulty.
