--- a/_posts/info/2000-01-04-schedule.md
+++ b/_posts/info/2000-01-04-schedule.md
@@ -7,29 +7,30 @@ categories:
 
 **Meeting Schedule**
 
-| Week | Topic   | Process  | Readings      | Assignment   |
-| ---- | ------------ | ---------- | ------------- | ---- |
+
 | 1   | Introduction / Software installation     | | Kitzes et al. ch. [0](https://www.practicereproducibleresearch.org/core-chapters/0-preface.html), [1](https://www.practicereproducibleresearch.org/core-chapters/1-intro.html)| |
 |  | Automating repetitive tasks | Intro to the command line | Buffalo Ch. 3 (Sakai)| |
-| 2   | Automating repetitive tasks  | Shell scripts | Buffalo Ch. 7 (Sakai) | Commenting a shell script |
-| 3   | Big data and answerable questions   | Discussion of your research  | Buffalo Ch. 1 |                           |
-|      | High performance computing  | Intro to the cluster | Buffalo Ch. 4 ||
-| 4   | Sharing, collaboration, and research transparancy | Git| Buffalo Ch. 5 | Share your git repo       |
-| 5   | Coding for data analysis| Intro to R and RStudio| Buffalo Ch. 8 ||
+| 2   | Automating repetitive tasks  | More command line | Buffalo Ch. 7 (Sakai) |  |
+| 3   | Automating repetitive tasks  | Shell scripts | Buffalo Ch. 7 cont. | Commenting a shell script |
+| 4   | High performance computing  | Intro to the cluster | Buffalo Ch. 4 ||
+|     | Sharing and research transparancy | Git| Buffalo Ch. 5 (Sakai)|        |
+| 5   | Collaboration | Git cont.| Buffalo Ch. 5 cont. | Share your git repo       |
+| TBD   | Big data and answerable questions | Discussion of your research | Buffalo Ch. 1||
+|    | Coding for data analysis| Intro to R and RStudio| Buffalo Ch. 8 ||
 |    | Data organization and management|R: functions|Buffalo Ch. 2, Kitzes P1||
 ||Data visualization for exploration| R: ggplot2| Wickham ch.2,3,28 | |
-| 6    | Good data practice | R Markdown| Wickham ch. 27,29,30 |Exploratory analysis|
+|     | Good data practice | R Markdown| Wickham ch. 27,29,30 |Exploratory analysis|
 || Analyzing data by category|R: plyr/dplyr | Wickham ch. 5 | |
-| 7 | Tidy Data and Relational data|R: dplyr,tidyr| Wickham ch. 12,13
+|  | Tidy Data and Relational data|R: dplyr,tidyr| Wickham ch. 12,13
 |    | Testing and Scripting|R - shell  | Buffalo ch. 8 |     |
-| 8   | Post break recap
+|    | Post break recap
 ||Appropriate analyses and statistics      ||Foster et al.  |
-| 9    | Automating repetitive tasks| Python: intro| Grus Ch. 2 / Vanderplas: whirlwind  |                              |
+|     | Automating repetitive tasks| Python: intro| Grus Ch. 2 / Vanderplas: whirlwind  |                              |
 ||Pattern counting |Python: basics|Vanderplas ch. 1|Pattern counting|
-| 10   | Data structures and complex data| Python: pandas |Vanderplas ch. 2-3||
-|11    | Packaging complex data| Python: pandas joins|||
+|    | Data structures and complex data| Python: pandas |Vanderplas ch. 2-3||
+|    | Packaging complex data| Python: pandas joins|||
 |   | Review and work on projects| || Complete data analysis    |
-| 12   | Making sure it's right   | Python: tests  | Buffalo: p.13              ||
+|    | Making sure it's right   | Python: tests  | Buffalo: p.13              ||
 |   | Command line   |  Python: scripts and tests                |              ||
-| 13   | Visualization   | Python: matplotlib | Vanderplas ch. 4  ||
+|    | Visualization   | Python: matplotlib | Vanderplas ch. 4  ||
 |   |SQL, Wrap up, evaluations  ||
