update for day 7

--- a/_posts/info/2000-01-04-schedule.md
+++ b/_posts/info/2000-01-04-schedule.md
@@ -12,7 +12,7 @@ categories:
 |  | Automating repetitive tasks | Intro to the command line | Buffalo Ch. 3 (Sakai)| |
 | 2   | Automating repetitive tasks  | More command line | Buffalo Ch. 7 (Sakai) |  |
 | 3   | Automating repetitive tasks  | Shell scripts | Buffalo Ch. 7 cont. | Commenting a shell script |
-| 4   | High performance computing  | Intro to the cluster | Buffalo Ch. 4 ||
+| 4   | High performance computing  | Intro to the cluster |  ||
 |     | Sharing and research transparancy | Git| Buffalo Ch. 5 (Sakai)|        |
 | 5   | Collaboration | Git cont.| Buffalo Ch. 5 cont. | Share your git repo       |
 | TBD   | Big data and answerable questions | Discussion of your research | Buffalo Ch. 1||
