--- a/_posts/info/2000-01-03-texts.md
+++ b/_posts/info/2000-01-03-texts.md
@@ -9,6 +9,8 @@ categories:
 
 [The Practice of Reproducible Research](https://www.practicereproducibleresearch.org/). Justin Kitzes, Daniel Turek, Fatma Deniz (Eds.) 2017. UC Press.
 
+[Modern Dive](http://moderndive.com/). Chester Ismay and Albert Y. Kim. 2017.
+
 [R for Data Science](http://r4ds.had.co.nz/). Hadley Wickham and Garrett Grolemund. 2016. O’Reilly Media.
 
 Data Science from Scratch. Joel Grus. 2015. O’Reilly Media. Free online via the URI library and Safari Books. Search the URI library for the title and follow the links.
