--- a/_posts/weeks/2018-02-13-day7.md
+++ b/_posts/weeks/2018-02-13-day7.md
@@ -10,8 +10,8 @@ categories:
 
 ### Reading:
 
-Copying to cluster: https://support.ceci-hpc.be/doc/_contents/ManagingFiles/TransferringFilesEffectively.html  
-Pre-installed software: https://support.ceci-hpc.be/doc/_contents/UsingSoftwareAndLibraries/UsingPreInstalledSoftware/index.html  
-Slurm tutorial: https://support.ceci-hpc.be/doc/_contents/QuickStart/SubmittingJobs/SlurmTutorial.html  
-Slurm basics: http://www.brightcomputing.com/blog/bid/174099/slurm-101-basic-slurm-usage-for-linux-clusters  
-URI slurm info: https://web.uri.edu/hpc-research-computing/using-seawulf/
+[Copying to cluster](https://support.ceci-hpc.be/doc/_contents/ManagingFiles/TransferringFilesEffectively.html)  
+[Using pre-installed software](https://support.ceci-hpc.be/doc/_contents/UsingSoftwareAndLibraries/UsingPreInstalledSoftware/index.html)  
+[Slurm tutorial](https://support.ceci-hpc.be/doc/_contents/QuickStart/SubmittingJobs/SlurmTutorial.html)  
+[Slurm basics](http://www.brightcomputing.com/blog/bid/174099/slurm-101-basic-slurm-usage-for-linux-clusters)  
+[URI slurm info](https://web.uri.edu/hpc-research-computing/using-seawulf/)
